--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
-    "node": "5.0.0",
-    "npm": "4.6.1"
+    "node": "14.x"
   },
   "author": "Carol Sauhi - carol_sauhi@hotmail.com",
   "license": "ISC",
