--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Carol Sauhi - carol_sauhi@hotmail.com",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
