--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "marvel-search",
   "version": "1.0.0",
-  "description": "Page for search Marvel's characters and show them informations.",
+  "description": "Page for search Marvel's characters and show them information.",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
@@ -18,13 +18,14 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "ejs": "^3.1.6",
-    "express": "^4.17.2",
+    "ejs": "^3.1.10",
+    "express": "^4.19.2",
     "express-session": "^1.17.2",
     "http": "0.0.1-security",
-    "https": "^1.0.0"
+    "https": "^1.0.0",
+    "marvel-search": "file:"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.22"
   }
 }
